<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.amikom.mylocalization.MainActivity">


    <TextView
        android:id="@+id/txtHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frm_head"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/frm_name" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/frm_Email"/>

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/frm_Phone"/>

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/frm_Pwd"/>

    <CheckBox
        android:id="@+id/cbAggre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frm_check"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_Submit"/>

    <Button
        android:id="@+id/btnLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_Lang"/>

</LinearLayout>
